--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,57 @@
-.App {
+*{
+  margin: 0;padding: 0;
+}
+.tp-navbar{
+  height: 40px;
+  color: white;
+  background-color: #61dafb;
+}
+li{
+list-style: none;
+padding: 7px 12px;
+}
+ul li a{
+color: black;
+list-style: none;
+text-decoration: none;
+padding-top: 5px;
+}
+/*
+nav bar------------------- 
+Place the navbar at the bottom of the page, and make it stick */
+.bnavbar {
+  background-color: #333;
+  overflow: hidden;
+  position: fixed;
+  bottom: 0;
+  width: calc(100% - 20px);
+  margin:6px 5px;
+  border-bottom-left-radius:19px ;
+  border-bottom-right-radius:19px;
+  z-index: 2;
+  overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+.bnavbar a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
   text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Change the color of links on hover */
+.bnavbar a:hover {
+  background-color: #ddd;
+  color: black;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+/* Add a color to the active/current link */
+.bnavbar a.active {
+  background-color: #04AA6D;
   color: white;
 }
 
