--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,12 @@
-*{
+/* *{
   margin: 0;padding: 0;
-}
-.tp-navbar{
+} */
+/* .tp-navbar{
   height: 40px;
   color: white;
   background-color: #61dafb;
-}
-li{
+} */
+/* li{
 list-style: none;
 padding: 7px 12px;
 }
@@ -15,48 +15,22 @@ color: black;
 list-style: none;
 text-decoration: none;
 padding-top: 5px;
-}
-/*
-nav bar------------------- 
-Place the navbar at the bottom of the page, and make it stick */
-.bnavbar {
-  background-color: #333;
-  overflow: hidden;
-  position: fixed;
-  bottom: 0;
-  width: calc(100% - 20px);
-  margin:6px 5px;
-  border-bottom-left-radius:19px ;
-  border-bottom-right-radius:19px;
-  z-index: 2;
-  overflow: hidden;
-}
+} */
 
-/* Style the links inside the navigation bar */
-.bnavbar a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-/* Change the color of links on hover */
-.bnavbar a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-/* Add a color to the active/current link */
-.bnavbar a.active {
-  background-color: #04AA6D;
-  color: white;
-}
 
 .App-link {
   color: #61dafb;
+}
+.container{
+padding-bottom: 70px;
+}
+@media only screen and (min-width: 600px){
+  .container{
+  padding-bottom: 5px;
+  }
+  .container{
+    padding-left: 80px;
+    }
 }
 
 @keyframes App-logo-spin {
