--- a/src/component/items/Items.css
+++ b/src/component/items/Items.css
@@ -10,8 +10,8 @@
 }
 
 .items-img{
-    width: 80px;
-  height: 80px;
+    width: 70px;
+
 }
 .items-content{
     padding-left: 5px;
@@ -21,4 +21,14 @@
     font-weight: bold;
     font-size: 1.3rem;
     display: flex;
+}
+.le{
+    justify-content: space-between;
+}
+.icon-delete{
+    margin: 15px;
+}
+.show{
+    display: flex;
+    flex-direction: column;
 }
