--- a/src/component/tpNavbar/TpNavbar.css
+++ b/src/component/tpNavbar/TpNavbar.css
@@ -1,6 +1,8 @@
 .c-nav{
   background: #F7EC09;
-  
+  position: fixed;
+  width: 100%;
+  height: 50px;
   justify-content: space-between;
 }
 .nav{
@@ -37,6 +39,7 @@
   .icon {
     display: none; 
     font-size: 1.5rem;
+    width:1.5rem ;
   }
   
   @media screen and (max-width: 600px) {
@@ -50,6 +53,12 @@
       margin-left: 10px;
       border-radius: 6px;
       margin-top: 10px;
+      float: left;
+display: block;
+text-align: center;
+padding: 14px 16px;
+text-decoration: none;
+font-size: 17px;
     }
     .links{
       display: flex;
