--- a/src/component/tpNavbar/TpNavbar.css
+++ b/src/component/tpNavbar/TpNavbar.css
@@ -1,7 +1,7 @@
 .c-nav{
   background: #F7EC09;
   position: fixed;
-  width: 100%;
+  width: 100vw;
   height: 50px;
   justify-content: space-between;
 }
