--- a/src/component/tpNavbar/TpNavbar.css
+++ b/src/component/tpNavbar/TpNavbar.css
@@ -4,6 +4,7 @@
   width: 100vw;
   height: 50px;
   justify-content: space-between;
+  z-index: 3;
 }
 .nav{
   background: #F7EC09;
@@ -16,6 +17,7 @@
 .logo{
   font-size: 2rem;
   color: #A149FA;
+  z-index: 2;
 }
 .topnav {
     overflow: hidden;
@@ -25,10 +27,9 @@
     float: left;
     display: block;
     text-align: center;
-    padding: 14px 16px;
+    /* padding: 14px 16px; */
     text-decoration: none;
     font-size: 17px;
-    z-index: 2;
   }
   
   .topnav a:hover {
@@ -41,7 +42,19 @@
     font-size: 1.5rem;
     width:1.5rem ;
   }
-  
+  .g-btn{
+    background-color: #3EC70B;
+    margin-bottom: 10px;
+    margin-left: 10px;
+    border-radius: 6px;
+    float: left;
+display: block;
+text-align: center;
+padding: 10px 13px;
+text-decoration: none;
+font-size: 17px;
+margin-right: 30px;
+  }
   @media screen and (max-width: 600px) {
     .c-nav{
       flex-direction: column;
