--- a/src/component/items/Items.css
+++ b/src/component/items/Items.css
@@ -17,12 +17,32 @@
 .items-content{
     padding-left: 5px;
     min-width: 70%; 
+    padding-top: 7px;
 }
 .items-title{
     color: #3B44F6;
     font-weight: bold;
     font-size: 1.3rem;
     display: flex;
+    padding-top: 7px;
+}
+.items-date{
+    color: #3EC70B;
+    padding-top: .8rem;
+    padding-bottom: .4rem;
+}
+.items-tag{
+    background-color: #3B44F6;
+    border-radius: 70px;
+    display: inline;
+    /* padding: .4rem; */
+    padding-top: 4px;
+    padding-bottom: 4px;
+    /* margin-: .4rem; */
+    padding-left: 1rem;
+padding-right: 1rem;
+color: white;
+box-shadow:0 4px 7px 0 rgba(51, 46, 46, 0.382);
 }
 .le{
     justify-content: space-between;
@@ -33,4 +53,8 @@
 .show{
     display: flex;
     flex-direction: column;
+}
+.items-rdmore{
+    display: inline;
+    color: #3B44F6;
 }
