--- a/src/component/items/Items.css
+++ b/src/component/items/Items.css
@@ -33,16 +33,17 @@
 }
 .items-tag{
     background-color: #3B44F6;
-    border-radius: 70px;
+    font-size: 12px;
+    border-radius: 5px;
     display: inline;
     /* padding: .4rem; */
-    padding-top: 4px;
-    padding-bottom: 4px;
+    padding-top: 3px;
+    padding-bottom: 3px;
     /* margin-: .4rem; */
-    padding-left: 1rem;
-padding-right: 1rem;
+    padding-left: .5rem;
+padding-right: .5rem;
 color: white;
-box-shadow:0 4px 7px 0 rgba(51, 46, 46, 0.382);
+box-shadow:0 3px 5px 0 rgba(51, 46, 46, 0.382);
 }
 .le{
     justify-content: space-between;
