--- a/src/component/FormContent/Post.css
+++ b/src/component/FormContent/Post.css
@@ -32,6 +32,9 @@ border: 2px solid #A149FA;
 width: 94%;
 margin: 5px 0 70px 0 ;
 }
+.post-blogger{
+    padding: 10px;
+}
 .post-btn{
     margin: 4px;
     color:white ;
